--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.org.springframework=debug
 server.port=8081
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url = jdbc:h2:mem:rest
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
