--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -2,6 +2,16 @@ logging.level.org.springframework=debug
 server.port=8081
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url = jdbc:h2:mem:rest
-spring.jpa.defer-datasource-initialization=true
+#spring.datasource.url = jdbc:h2:mem:rest
 spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_sn
+spring.datasource.username=anmosh
+spring.datasource.password=admin@123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name=anmosh
+spring.security.user.password=anmosh@1997
+
+#spring.jpa.defer-datasource-initialization=true
